# brave-core

./: .pylintrc  BUILD.gn  DEPS  Jenkinsfile  package-lock.json  package.json  tslint.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  os_settings_strings.grdp
browser/: about_flags.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
common/: pref_names.cc  pref_names.h  resource_bundle_helper.cc
components/brave_ads/common/: BUILD.gn  brave_ads_driver.mojom  features.cc  features.h
components/brave_search/common/: BUILD.gn  buildflags.gni  features.cc  features.h
ios/: BUILD.gn
ios/browser/api/certificate/: BUILD.gn  brave_certificate.h  brave_certificate.mm
ios/browser/api/certificate/common/: BUILD.gn  brave_certificate_enums.h
ios/browser/api/certificate/models/: BUILD.gn  brave_certificate_fingerprint.h  brave_certificate_fingerprint.mm  brave_certificate_model_private.h  brave_certificate_public_key_info.h  brave_certificate_public_key_info.mm  brave_certificate_rdns_sequence.h  brave_certificate_rdns_sequence.mm  brave_certificate_signature.mm
ios/browser/api/certificate/utils/: BUILD.gn  brave_certificate_utils.h  brave_certificate_utils.mm  brave_certificate_x509_utils.cc  brave_certificate_x509_utils.h
patches/: base-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-ui-android-toolbar-BUILD.gn.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-common-BUILD.gn.patch  chrome-test-BUILD.gn.patch  components-permissions-permission_request.cc.patch  components-sync-driver-BUILD.gn.patch  (+5 more)
(+292 files in other folders)
