import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "brave_ads_driver.mojom" ]

  deps = [ "//mojo/public/mojom/base" ]
}

static_library("common") {
  sources = [
    "features.cc",
    "features.h",
    "pref_names.cc",
    "pref_names.h",
    "switches.cc",
    "switches.h",
  ]

  deps = [ "//base" ]
}
