# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/ios/rules.gni")
import("//ios/build/config.gni")

source_set("certificate") {
  configs += [ "//build/config/compiler:enable_arc" ]

  sources = [
    "brave_certificate.h",
    "brave_certificate.mm",
  ]

  deps = [
    "common",
    "models",
    "//base",
    "//net",
    "//third_party/abseil-cpp:absl",
    "//third_party/boringssl",
  ]

  include_dirs = [ "common" ]

  frameworks = [
    "Foundation.framework",
    "Security.framework",
  ]
}
